# me

./: .project  CMakeLists.txt  sdkconfig  sdkconfig.old  sdkconfig.oldddd
components/LAN/: CMakeLists.txt  LAN.c
components/WIFI/: WIFI.c
components/audioPlayer/: audioPlayer.c
components/audioPlayer/include/: audioPlayer.h
components/esp32-rotary-encoder/: rotary_encoder.c
components/esp32-rotary-encoder/include/: rotary_encoder.h
components/ftp/: ftp.c
components/ftp/include/: ftp.h
components/leds/: leds.c  p9813.c
components/me_slot_config/: 3n_mosfet.c  CMakeLists.txt  TOFs.c  analog.c  buttons.c  encoders.c  executor.c  lidars.c  me_slot_config.c  rfid.c  tachometer.c
components/me_slot_config/include/: lidars.h  me_slot_config.h
components/myCDC/: myCDC.c
components/myCDC/include/: myCDC.h
components/myMqtt/: myMqtt.c
components/my_board/: CMakeLists.txt
components/my_board/my_board_v1_0/: board.h  board_pins_config.c
components/pn532/: CMakeLists.txt  pn532.c  pn532_i2c_esp32.c
components/pn532/include/: pn532.h  pn532_i2c_esp32.h
components/reporter/: reporter.c
components/reporter/include/: reporter.h
components/stateConfig/: stateConfig.c
components/stateConfig/include/: help.h  stateConfig.h
components/tinyosc/: tinyosc.c
main/: CMakeLists.txt  cdc.c  cdc.h  cmd.c  main (2).c  main.c  msc_disk.c  sd_card.c  tusb_config.h  usb_descriptors.c
osc_python_test/: sendLed_test.py  sendLed_test.spec
